--- a/themes/builderfront/partial/builderfront/surround-area-decorator.phtml
+++ b/themes/builderfront/partial/builderfront/surround-area-decorator.phtml
@@ -1,9 +1,14 @@
+<?php
+/**
+ * @var string $content
+ */
+?>
 <!--
     Area will decorate for ui management
 -->
-
+<div style="border: 1px dashed #002a80">
     <?php echo $content; ?>
-
+</div>
 <!--
     / Area will decorate for ui management
 -->
