--- a/themes/builderfront/partial/builderfront/surround-widgets-decorator.phtml
+++ b/themes/builderfront/partial/builderfront/surround-widgets-decorator.phtml
@@ -1,3 +1,8 @@
+<?php
+/**
+ * @var \yimaWidgetator\Widget\Interfaces\WidgetInterface $widget
+ */
+?>
 <!--
     Widgets will decorate for ui management
 -->
