--- a/themes/builderfront/partial/builderfront/management-template.phtml
+++ b/themes/builderfront/partial/builderfront/management-template.phtml
@@ -2,6 +2,14 @@
     return ; // It's not necessary to render UI Management
 ?>
 
+<?php
+$this->inlineScript()
+    ->appendFile($this->basePath().'/builderfront/js/jquery-ui.min.js')
+    ->appendFile($this->basePath().'/builderfront/js/jquery.ui.touch-punch.min.js')
+    ->appendFile($this->basePath().'/builderfront/js/main.js')
+;
+?>
+
 <?php $this->inlineScript()->captureStart(); ?>
 // <script type="text/javascript">
     (function($){
@@ -19,4 +27,8 @@
 <div id="builderfront_loader">
     <img src="<?php echo $this->basePath(); ?>/builderfront/images/loading.gif" alt="Loading...">
     <?php echo $this->translate('Loading elements...', 'Widgetizer');?>
+</div>
+
+<div class="builderfront_element_dragable">
+    <img src="<?php echo $this->basePath(); ?>/builderfront/images/widget.jpg">
 </div>
