--- a/themes/builderfront/partial/builderfront/surround-area-decorator.phtml
+++ b/themes/builderfront/partial/builderfront/surround-area-decorator.phtml
@@ -6,7 +6,7 @@
 <!--
     Area will decorate for ui management
 -->
-<div style="border: 1px dashed #002a80">
+<div class="builderfront_area_holder">
     <?php echo $content; ?>
 </div>
 <!--
