init widget settings buttons

--- a/themes/builderfront/partial/builderfront/management-template.phtml
+++ b/themes/builderfront/partial/builderfront/management-template.phtml
@@ -20,6 +20,8 @@ $this->inlineScript()
 
 $this->headLink()
     ->appendStylesheet($this->basePath().'/builderfront/css/style.css')
+    ->appendStylesheet($this->basePath().'/builderfront/css/skin.css')
+    ->appendStylesheet($this->basePath().'/builderfront/fonts/font-awesome/css/font-awesome.min.css')
 ;
 
 // Enable Widgetator scripts to ajax calls
