--- a/themes/builderfront/www/builderfront/css/style.css
+++ b/themes/builderfront/www/builderfront/css/style.css
@@ -50,10 +50,8 @@
     width: 100px;
 }
 
-.builderfront_widget_holder {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+.ui-sortable-handle{
+    cursor: move;
 }
 
 .builderfront_loading_content {
@@ -62,20 +60,36 @@
     border: solid 1px #942a25;
 }
 
-.builderfront_widget_holder .builderfront_settings{
-    border-radius: 0px;
-    float: right;
+.builderfront_widget_holder {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.builderfront_settings{
     visibility:hidden;
     opacity:0;
     transition: visibility 0s linear 0.5s,opacity 0.5s linear;
     -webkit-transition: visibility 0s linear 0.5s,opacity 0.5s linear;
     -moz-transition: visibility 0s linear 0.5s,opacity 0.5s linear;
-    width: 100px;
 }
 
-.builderfront_widget_holder:hover .builderfront_settings {
+.ui-sortable-handle .builderfront_settings{
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    top: 45%;
+    left: 0;
+}
+
+.ui-sortable-handle:hover .builderfront_settings {
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
 }
 
+.builderfront_settings .builderfront_settings_item {
+    margin: 0 7px;
+}
