--- a/themes/builderfront/www/builderfront/css/style.css
+++ b/themes/builderfront/www/builderfront/css/style.css
@@ -50,7 +50,7 @@
     width: 100px;
 }
 
-.ui-sortable-handle{
+.ui_sortable_handle{
     cursor: move;
 }
 
@@ -75,21 +75,39 @@
     -moz-transition: visibility 0s linear 0.5s,opacity 0.5s linear;
 }
 
-.ui-sortable-handle .builderfront_settings{
+.ui_sortable_element .builderfront_settings{
     position: absolute;
-    width: 100%;
     height: 100px;
     text-align: center;
-    top: 45%;
-    left: 0;
+    bottom: 0;
+    right: -10px;
 }
 
-.ui-sortable-handle:hover .builderfront_settings {
+.ui_sortable_element:hover .builderfront_settings {
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
 }
 
 .builderfront_settings .builderfront_settings_item {
-    margin: 0 7px;
+    clear: both;
+    display: block;
+    float: right;
+    width: 30px;
+    height: 30px;
+    padding: 3px 9px;
+    margin-bottom: 5px;
+}
+
+.ui_sortable_element .builderfront_sortable_handler {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #000000;
+    color: #ffffff;
+    width: 21px;
+    height: 39px;
+    text-align: center;
+    padding-top: 10px;
+    cursor: move;
 }
