--- a/themes/builderfront/partial/builderfront/surround-area-decorator.phtml
+++ b/themes/builderfront/partial/builderfront/surround-area-decorator.phtml
@@ -1,12 +1,13 @@
 <?php
 /**
  * @var string $content
+ * @var string $area
  */
 ?>
 <!--
     Area will decorate for ui management
 -->
-<div class="builderfront_area_holder">
+<div id="widgetizer-area-<?php echo $area; ?>" class="builderfront_area_holder">
     <?php echo $content; ?>
 </div>
 <!--
